@@ -24,6 +24,7 @@ endif::[]
 https://github.com/elastic/apm-agent-go/compare/v1.6.0...master[View commits]
 
  - Add support for API Key auth {pull}698[(#698)]
+ - module/apmsql: report rows affected {pull}700[(#700)]
 
 [[release-notes-1.x]]
 === Go Agent version 1.x
